--- a/CSS/style.css
+++ b/CSS/style.css
@@ -75,3 +75,28 @@ a:visited{
     color:red;
     border:1px solid black;
 }
+
+/* Border */
+.borderone{
+    border: 2px dashed red;
+}
+.bordertwo{
+    border-left: 4px solid red;
+    border-right: 4px solid red;
+}
+
+.borderwidth{
+    border-width: 10px;
+    border-style: solid;
+}
+
+.borderstyle{
+    border-style: dashed;
+    /* all four sides => Top, Right, Bottom, Left*/
+    border-style: dashed solid;
+    /* T&B L&R */
+    border-style: solid dotted dashed;
+    /* T /l&R/ B */
+    border-style: dashed solid double dotted;
+    /* T / R / B / L */
+}
