--- a/Floral/css/style.css
+++ b/Floral/css/style.css
@@ -2,7 +2,10 @@
     font-family: Lobster;
     src: url(../Lobster/Lobster-Regular.ttf);
 }
-
+@font-face {
+    font-family: Cabin;
+    src: url(../Cabin/Cabin/Cabin-Bold.ttf);
+}
 *{
     margin: 0px;
     padding: 0px;
@@ -193,7 +196,7 @@
 
 .packaging img{
     border-radius: 5px;
-    width: 30%;
+    width: 40%;
     float:left;
 }
 
@@ -202,7 +205,7 @@
     left:50px;
     width: 90%;
     text-align: justify;
-    line-height: 30px;
+    line-height: 25px;
 }
 
 .packaging_text h1{
@@ -265,6 +268,154 @@
 
 .footer_icon{
     color: gray;
+    display: inline-block;
+    margin: 20px 10px;
+}
+
+/* About us */
+
+.aboutus img{
+    width: 100%;
+    height: 670px;
+    z-index: 2;
+}
+
+.aboutusbanner{
+    position: absolute;
+    top: 350px;
+    left: 550px;
+    z-index: 1;
+    text-align: center;
+    animation: fadeIn ease 2s;
+}
+
+@keyframes fadeIn {
+    0%{
+        opacity: 0;
+    }
+    100%{
+        opacity: 1;
+    }
+}
+
+.aboutusbanner h1{
+    font-size: 50px;
+    letter-spacing: 15px;
+    font-family: Cabin;
+    color:#266a79;
+    margin-bottom: 30px;
+    padding-left: 15px;
+}
+
+.aboutusbutton{
+    border-radius: 10px;
+    padding: 15px 40px;
+    color: white;
+    background-color: transparent;
+    border: 1px solid #fff;
+    font-family: Cabin;
+    font-size: 15px;
+    cursor: pointer;
+}
+
+.aboutusbutton:hover{
+    background-color: #266a79;
+    transition-duration: 0.4s;
+    border: 1px solid #266a79;
+    color: #e0ebee;
+}
+
+.quoteaboutus{
+    width: 50%;
+    margin: auto;
+}
+
+.quoteaboutus h2{
+    text-align: center;
+    font-family: Cabin;
+    color: #266a79;
+    margin-top: 30px;
+}
+
+.mission{
+    margin-left: 150px;
+    margin-top: 50px;
+    display: grid;
+    grid-template-columns: 60% 40%;
+    font-family: Cabin;
+}
+
+.mission_text{
+    background-color: ;
+    padding: 100px 50px 100px;
+    border-radius: 10px;
+    margin-right: 20px;
+}
+
+.missionimg{
+    width: 70%;
+    border-radius: 10px;
+    box-shadow: 2px 2px 10px gray;
+}
+
+.teamheading{
+    text-align: center; 
+    margin-top: 50px;
+    font-family: Cabin;
+}
+
+.teamheading h1{
+    font-family: Cabin;
+    margin-bottom: 5px;
+}
+.teamheading hr{
+    width: 100px;
+    margin:auto;
+    background-color: #266a79;
+    padding:1px;
+}
+
+.team{
+    display: grid;
+    grid-template-columns: auto auto auto;
+    margin-top: 70px;
+}
+
+
+.team img{
+    width: 300px;
+    height: 300px;
+    border-radius: 50%;
+}
+
+.teammember{
+    text-align:center;
+}
+
+.teammember div{
+    margin-top: 20px;
+}
+
+.teammember_title{
+    margin-top: 5px;
+    color: #266a79;
+    font-family: Lobster;
+    font-style: unset;
+    font-size: 20px;
+}
+
+.teammember_desc{
+    padding: 20px 40px;
+    font-family: Cabin;
+}
+
+.teammember i{
+    margin-left: 200px;
+}
+
+.team_icon{
+    text-decoration: none;
+    color: black;
     display: inline-block;
     margin: 20px 10px;
 }
