--- a/Floral/css/style.css
+++ b/Floral/css/style.css
@@ -308,7 +308,7 @@
 }
 
 .aboutusbutton{
-    border-radius: 10px;
+    border-radius: 7px;
     padding: 15px 40px;
     color: white;
     background-color: transparent;
@@ -417,4 +417,97 @@
     color: black;
     display: inline-block;
     margin: 20px 10px;
+}
+
+.contactus_heading{
+    background-color: #e0ebee;
+    padding: 150px;
+}
+
+.contactus_heading h1{
+    text-align: center;
+    font-family: Cabin;
+    text-transform: uppercase;
+    color: #266a79;
+    margin-top: -100px;
+}
+
+.contactus_heading hr{
+    width: 100px;
+    margin: auto;
+    padding: 1px;
+    margin-top: 7px;
+    background-color:#266a79;
+}
+
+.contactus_socials{
+    display: grid;
+    grid-template-columns: auto auto auto;
+    margin-left: 40px;
+    margin-right: 40px;
+    grid-gap: 20px;
+    margin-top: -170px;
+}
+
+.contactus_box{
+    text-align: center;
+    border: 1px double #000000;
+    padding: 120px 10px 120px 10px;
+    background-color: #fff;
+    transition: transform 0.6s;
+    transform-style: preserve-3d;
+    box-shadow: 4px 4px 8px gray;
+}
+
+.contactus_box:hover{
+    transform: rotateY(180deg);
+}
+
+.contactus_frontcard, .contactus_backcard{
+    -webkit-backface-visibility: hidden;
+    backface-visibility: hidden;
+}
+
+.contactus_backcard{
+    line-height: 50px;
+    margin-top: -70px;
+    transform: rotateY(180deg);
+}
+
+.contactus_backcard h1{
+    color: #266a79;
+    font-family: Cabin;
+}
+
+/* Contact Us Form */
+.contactus_form{
+    display: grid;
+    grid-template-columns: 40% 60%;
+    margin-left: 120px;
+    margin-top: 50px;
+}
+
+.form{
+    width: 70%;
+    margin: auto;
+}
+
+input[type="text"],
+input[type="email"],
+input[type="number"],
+input[type="date"]{
+    width: 100%;
+    height: 40px;
+    border-radius: 5px;
+    outline:none;
+    border: none;
+    background-color: #e0ebee;
+}
+
+
+input[type="text"]:focus,
+input[type="email"]:focus,
+input[type="number"]:focus,
+input[type="date"]:focus{
+    border: 2px solid #ccc;
 }
